# OOP_lab_3

./: .gitignore  CMakeLists.txt  main.cpp
.devcontainer/: devcontainer.json
include/: figure.h  figure_array.h  rectangle.h  rhomb.h  trapezoid.h  vector2d.h
src/: figure.cpp  figure_array.cpp  rectangle.cpp  rhomb.cpp  trapezoid.cpp  vector2d.cpp
tests/: test.h  test_figure.cpp  test_vector2d.cpp
